<resources>
    <string name="app_name">Конструктор резюме</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="skills">Перечислите ваши ключевые навыки здесь</string>
    <string name="fio">ФИО</string>
    <string name="interests">Перечислите ваши интересы здесь</string>
    <string name="save">Сохранить</string>
    <string name="savePhoto">Сохранить фото</string>
    <string name="projectTitle">Название проекта</string>
    <string name="details">Детали</string>
    <string name="startDate">Дата начала</string>
    <string name="endDate">Дата окончания</string>
    <string name="deletePhoto"><u>Удалить фото</u></string>
    <string name="delete"><u>Удалить</u></string>
    <string name="download">Скачать резюме</string>
    <string name="recommendations">Рекомендации по заполнению</string>
    <string name="share">Поделиться</string>
    <string name="contact_recommendations_tittle">Рекомендации по заполнению секции Контактная информация</string>
    <string name="contact_recommendations"> Обратите внимание на почтовый ящик — он должен соответствовать профессиональному статусу. Адрес kisulya1987@mail.ru подчеркнет неделовой подход к работе. А вот angelina.vavilonova@gmail.com — уже лучше.</string>
    <string name="career_recommendations_tittle">Рекомендции по заполнению секции Опыт работы</string>
    <string name="career_recommendations1"> 1. Если компания неизвестна на рынке, укажите ее род деятельности. Не просто ООО «Рога и копыта», а «Черноморское отделение арбатовской конторы по заготовке рогов и копыт». Деятельность компании можно кратко описать в блоке обязанностей.</string>
    <string name="career_recommendations2"> 2. В заголовках пишите общепринятые на рынке названия должностей: например, «коммерческий директор» вместо «руководитель отдела по координации закупок и сбыта». Это же касается названия резюме. Нередко соискатели копируют в него последнюю должность, что неправильно: название должно отражать суть работы, а не запись в трудовой. К примеру, «руководитель проекта» выглядит универсальнее, чем «управляющий директор бизнес-единицы». Так ваше резюме быстрее найдут работодатели.</string>
    <string name="career_recommendations3"> 3. Никогда не копируйте список обязанностей из должностных инструкций. Выделите наиболее важные и запишите понятным языком, без канцеляризмов. Например, «оптимизация бизнес-процессов» вместо «реализация проектной деятельности по оптимизации бизнес-процессов». Пяти основных задач будет достаточно.</string>
    <string name="career_recommendations4"> 4. Помимо рабочих обязанностей, обязательно укажите ваши конкретные достижения и результаты деятельности (например, «совместно с ИТ-отделом разработал корпоративные стандарты контроля бизнес-процессов»).</string>
    <string name="education_recommendations_tittle">Рекомендации по заполнению секции Образование</string>
    <string name="education_recommendations1"> Все указанные в резюме образовательные курсы должны относиться к профессиональной деятельности. Лучше упустить что-то, чем добавлять сомнительные сертификаты — например, о курсах по массажу, — если в работе эти знания не нужны.</string>
    <string name="education_recommendations2"> О тернистом пути наверх всегда лучше рассказать на собеседовании. Поэтому можно опустить учебу в техникуме или ПТУ, если есть диплом о высшем образовании в той же сфере.</string>
    <string name="interests_recommendations_tittle">Рекомендации по заполнению секции Интересы</string>
    <string name="interests_recommendations1"> В некоторых случаях можно указать личностные качества, которые не относятся напрямую к профессии — это может быть хорошая физическая форма или спортивные достижения («КМС по лыжным гонкам»). Это касается и представителей не самых очевидных профессий: скажем, физическая форма часто важна для менеджеров по продажам, так как им приходится часто ездить на встречи и в командировки.</string>
    <string name="interests_recommendations2"> Все то же самое относится и к достижениям в интеллектуальной сфере. Если вы чемпион города по шахматам или выиграли олимпиаду по программированию — это интересно. Если просто увлекаетесь чтением, то нет. Добавляйте только то, что можно доказать и что поможет получить желаемую должность.</string>
    <string name="interests_recommendations3"> А вот хобби в большинстве случаев лучше совсем не указывать. Рекрутеру оно не интересно, а экзотические занятия (вроде эзотерики и даже йоги) и вовсе могут отпугнуть.</string>
    <string name="keySkills_recommendations_tittle">Рекомендации по заполнению секции Ключевые навыки</string>
    <string name="keySkills_recommendations1">Многие соискатели полностью игнорируют этот раздел, а зря: часто именно сюда смотрит рекрутер после знакомства с опытом и образованием кандидата. Ключевые навыки — это специфические знания и умения, относящиеся непосредственно к рабочим процессам. Для юристов это могут быть «Арбитражные суды» и «Корпоративное право», для менеджера по логистике «Работа с таможенными органами» и «Инкотермс», для финансиста — «Статистический анализ» и «Бюджетирование», и так далее.</string>
    <string name="keySkills_recommendations2">Избегайте очевидных вещей: не нужно писать, что вы знаете Windows, Internet Explorer и пользуетесь электронной почтой.</string>
    <string name="personalInfo_recommendations_tittle">Рекомендации по заполнению секции Персональная информация</string>
    <string name="personalInfo_recommendations1"> Персональная информация должна быть кратким (1 - 3 предложения) изложением того, что вы можете предложить. Выделить ключевые моменты вашего опыта, которые соответствуют требованиям вакансии.</string>
    <string name="personalInfo_recommendations2"> Избегайте банальностей и общих фраз. Вместо «Ответственности» и «Пунктуальности» напишите «Добросовестно отношусь к выполнению задач» и «Всегда укладываюсь в обещанные сроки». Суть от этого не поменяется, но формулировка привлечет больше внимания.</string>
    <string name="personalInfo_recommendations3"> Используйте этот раздел, для того чтобы объяснить, почему вы меняете напрвление карьеры. Выделите навыки, которые вы можете использовать из предыдущего опыта.</string>


</resources>