<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.resumebuilder.ui.projects.ProjectsViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/nameofProject"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="text"
            android:text="@={viewModel.projectsLiveData.project}"
            android:hint="@string/projectTitle"/>
        <EditText
            android:id="@+id/detailsofProject"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="text"
            android:text="@={viewModel.projectsLiveData.details}"
            android:hint="@string/details"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/startDateofProject"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:inputType="date"
                android:text="@={viewModel.projectsLiveData.startDate}"
                android:hint="@string/startDate"/>
            <EditText
                android:id="@+id/endDateofProject"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:text="@={viewModel.projectsLiveData.endDate}"
                android:hint="@string/endDate"
                android:inputType="date"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_save6"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_save"
            android:layout_marginStart="200dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd = "20dp"
            android:text="@string/save"/>
    </LinearLayout>
</layout>