<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.education.EducationRecommendationsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/button_back3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/button_save"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_back_arrow"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="20dp"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/education_recommendations_tittle"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="15dp"
            android:text="@string/education_recommendations1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="15dp"
            android:text="@string/education_recommendations2"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>