<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.resumebuilder.ui.contact.ContactViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/fio"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="40dp"
            android:inputType="textPersonName"
            android:text="@={viewModel.contactInfoLiveData.name}"
            android:hint="@string/fio"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.contactInfoLiveData.email}"
            android:hint="Электронная почта"/>
        <EditText
            android:id="@+id/telephone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp"
            android:inputType="phone"
            android:text="@={viewModel.contactInfoLiveData.telephone}"
            android:hint="Номер телефона"/>
        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp"
            android:text="@={viewModel.contactInfoLiveData.address}"
            android:hint="Адрес"/>
        <EditText
            android:id="@+id/dateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp"
            android:inputType="date"
            android:text="@={viewModel.contactInfoLiveData.dateOfBirth}"
            android:hint="Дата рождения"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/button_delete1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginStart="55dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_save1"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_save"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd = "20dp"
                android:text="@string/save"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_recommendations1"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_recommendations"
            android:layout_marginStart="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd = "20dp"
            android:text="@string/recommendations"/>
    </LinearLayout>
</layout>